# mmc

./: CMakeLists.txt  README
src/: .gitignore  CL.pm  CL.xs  MSDP.pm  MUD.pm  Main.pm  Makefile.in  Makefile.win32  Mapper.pm  Parser.pm  RStream.pm  UAPI.pm  config.h.in  configure  fields_without_hash_util.pm  main.c  mmc.txt  output.c  packmod.pl  sample.mmcrc  socket.c  socket.h  win32.c  window.c  window.h
windows/: .gitignore  BUILD.txt  b2c.vcxproj  mmc.sln  mmc.vcxproj  prebuild.cmd
